cambios del modulo de categoria

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -34,11 +34,11 @@
                         <a routerLink="/"
                             class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white">Dashboard</a>
                         <a routerLink="/team"
-                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Team</a>
+                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Categorias</a>
                         <a routerLink="/projects"
-                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Projects</a>
+                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Libros</a>
                         <a routerLink="/calendar"
-                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Calendar</a>
+                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Author</a>
                     </div>
                 </div>
             </div>
@@ -58,5 +58,7 @@
     </nav>
         <main class="p-4">
             <!-- AQUÍ se inyectan las páginas hijas -->
+
             <router-outlet></router-outlet>
+            
         </main>
