interfaz de tabla

--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -50,7 +50,7 @@
                                   <i class="fa-solid fa-trash"></i>  Editar
                                 </a>
 
-                                <button type="button" (click)="deleteCategory(catego.id)"
+                                <button type="button" [routerLink]="['/category/delete', catego.id]"
                                     class="inline-flex items-center px-3 py-1.5 text-sm rounded-lg border border-red-200 text-red-700 hover:bg-red-50">
                                   <i class="fa-solid fa-trash"></i>   Eliminar
                                 </button>
