--- a/src/app/pages/classification/classification-list/classification-list.component.html
+++ b/src/app/pages/classification/classification-list/classification-list.component.html
@@ -1,1 +1,13 @@
-<p>classification-list works!</p>
+<div class="cointainer mx-auto p-6">
+    <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center"> Clasificacione</h2>
+    <hr>
+    <br>
+    <a routerLink="/classifications/create" class="bg-green-500 text-white p-2 rounded">Nueva clasificacion</a>
+    <br><br>
+
+    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+
+<!--             @for(classification of classifications)
+ -->
+    </ul>
+</div>
