--- a/src/app/pages/classification/classification-list/classification-list.component.html
+++ b/src/app/pages/classification/classification-list/classification-list.component.html
@@ -1,13 +1,70 @@
-<div class="cointainer mx-auto p-6">
-    <h2 class="text-2xl font-bold text-gray-800 mb-6 text-center"> Clasificacione</h2>
-    <hr>
-    <br>
-    <a routerLink="/classifications/create" class="bg-green-500 text-white p-2 rounded">Nueva clasificacion</a>
-    <br><br>
+<div class="max-w-6xl mx-auto bg-white rounded-2xl shadow-sm border border-gray-200 overflow-hidden">
 
-    <ul class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="px-5 py-4 border-b border-gray-200 flex items-center justify-between">
+        <h2 class="text-lg font-semibold text-gray-800">Listado</h2>
+        <!-- Acciones opcionales -->
+        <div class="flex gap-2">
+            <button routerLink="/classification/create" class="px-3 py-2 text-sm rounded-lg border border-gray-300 hover:bg-gray-50" > <i class="fa-solid fa-plus"></i> Nueva
+                Clasificacion</button>
+        </div>
+    </div>
 
-<!--             @for(classification of classifications)
- -->
-    </ul>
+    <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+
+        <div class="p-5 overflow-x-auto">
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                    <tr>
+                        <th scope="col" class="px-6 py-3">
+                            Id
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Nombre
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Descripción
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Codigo
+                        </th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let classification of classification"
+                        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
+                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                            {{ classification.id }}
+                        </th>
+                        <td class="px-6 py-4">
+                            {{ classification.name }}
+                        </td>
+                        <td class="px-6 py-4">
+                            {{ classification.description }}
+                        </td>
+                          <td class="px-6 py-4">
+                            {{ classification.code }}
+                        </td>
+
+                        <td class="px-3 py-2">
+                            <div class="flex items-center justify-end gap-2">
+                                <a [routerLink]="['/classification/update', classification.id]"
+                                    class="inline-flex items-center px-3 py-1.5 text-sm rounded-lg border border-indigo-200 text-indigo-700 hover:bg-indigo-50">
+                                  <i class="fa-solid fa-trash"></i>  Editar
+                                </a>
+
+                                <button type="button" [routerLink]="['/classification/delete', classification.id]"
+                                    class="inline-flex items-center px-3 py-1.5 text-sm rounded-lg border border-red-200 text-red-700 hover:bg-red-50">
+                                  <i class="fa-solid fa-trash"></i>   Eliminar
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+
 </div>
