--- a/src/app/pages/classification/classification-update/classification-update.component.html
+++ b/src/app/pages/classification/classification-update/classification-update.component.html
@@ -1,5 +1,5 @@
 <div class="px-5 py-4 border-b border-gray-200 flex items-center justify-between">
-    <h2 class="text-lg font-semibold text-gray-800">Editar Clasificacion</h2>
+    <h2 class="text-lg font-semibold text-gray-800" *ngIf="classificationData">Editar Clasificacion {{ classificationData.name }}</h2>
     <!-- Acciones opcionales -->
 
 </div>
@@ -7,7 +7,7 @@
 
 <form class="max-w-sm mx-auto" [formGroup]="classificationForm" (ngSubmit)="updateClassification()">
     <div class="mb-5">
-        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Nombre</label>
+        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Nombre</label>
         <input type="text" id="name" formControlName="name"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              />
@@ -23,8 +23,8 @@
         <input type="text" id="description" formControlName="description"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              />
-              <div *ngIf="classificationForm.get('name')?.invalid && classificationForm.get('name')?.touched">
-            <small *ngIf="classificationForm.get('name')?.errors?.['required']" class="text-red-500">La descripción
+              <div *ngIf="classificationForm.get('description')?.invalid && classificationForm.get('description')?.touched">
+            <small *ngIf="classificationForm.get('description')?.errors?.['required']" class="text-red-500">La descripción
                 obligatorio.</small>
 
         </div>
@@ -35,8 +35,8 @@
         <input type="text" id="code" formControlName="code"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
              />
-              <div *ngIf="classificationForm.get('name')?.invalid && classificationForm.get('name')?.touched">
-            <small *ngIf="classificationForm.get('name')?.errors?.['required']" class="text-red-500">El código es requerido.</small>
+              <div *ngIf="classificationForm.get('code')?.invalid && classificationForm.get('code')?.touched">
+            <small *ngIf="classificationForm.get('code')?.errors?.['required']" class="text-red-500">El código es requerido.</small>
 
         </div>
     </div>
@@ -45,7 +45,7 @@
     <button type="submit"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Actualizar</button>
         
-          <button routerLink="/classification"
+          <button routerLink="/classifications"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Cerrar</button>
         </div>
 </form>
