--- a/src/app/pages/classification/classification-delete/classification-delete.component.html
+++ b/src/app/pages/classification/classification-delete/classification-delete.component.html
@@ -4,10 +4,10 @@
 
     <p><strong>Nombre: </strong> {{classificationData.name}}</p>
     <p><strong>Descripcion: </strong> {{classificationData.description}}</p>
-    <p><strong>Descripcion: </strong> {{classificationData.code}}</p>
+    <p><strong>Codigo: </strong> {{classificationData.code}}</p>
 
     <div class="flex justify-end space-x-4">
-        <a routerLink="/classification" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">Cancelar</a>
+        <a routerLink="/classifications" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">Cancelar</a>
         <button (click)="deleteClassification()" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">Eliminar</button>
     </div>
 </div>
