--- a/src/app/pages/classification/classification-list/classification-list.component.html
+++ b/src/app/pages/classification/classification-list/classification-list.component.html
@@ -4,7 +4,7 @@
         <h2 class="text-lg font-semibold text-gray-800">Listado</h2>
         <!-- Acciones opcionales -->
         <div class="flex gap-2">
-            <button routerLink="/classification/create" class="px-3 py-2 text-sm rounded-lg border border-gray-300 hover:bg-gray-50" > <i class="fa-solid fa-plus"></i> Nueva
+            <button routerLink="/classifications/create" class="px-3 py-2 text-sm rounded-lg border border-gray-300 hover:bg-gray-50" > <i class="fa-solid fa-plus"></i> Nueva
                 Clasificacion</button>
         </div>
     </div>
@@ -48,12 +48,12 @@
 
                         <td class="px-3 py-2">
                             <div class="flex items-center justify-end gap-2">
-                                <a [routerLink]="['/classification/update', classification.id]"
+                                <a [routerLink]="['/classifications/update', classification.id]"
                                     class="inline-flex items-center px-3 py-1.5 text-sm rounded-lg border border-indigo-200 text-indigo-700 hover:bg-indigo-50">
                                   <i class="fa-solid fa-trash"></i>  Editar
                                 </a>
 
-                                <button type="button" [routerLink]="['/classification/delete', classification.id]"
+                                <button type="button" [routerLink]="['/classifications/delete', classification.id]"
                                     class="inline-flex items-center px-3 py-1.5 text-sm rounded-lg border border-red-200 text-red-700 hover:bg-red-50">
                                   <i class="fa-solid fa-trash"></i>   Eliminar
                                 </button>
