modulo de books

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -34,13 +34,13 @@
                         <a routerLink="/"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white">Dashboard</a>
-                        <a routerLink="/team"
+                        <a routerLink="/category"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Categorias</a>
-                        <a routerLink="/projects"
+                        <a routerLink="/category"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Libros</a>
-                        <a routerLink="/calendar"
+                        <a routerLink="/author"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Author</a>
                     </div> 
