Se agregan las rutas de specimens y de publishers

--- a/src/app/pages/specimens/specimens-create/specimens-create.component.html
+++ b/src/app/pages/specimens/specimens-create/specimens-create.component.html
@@ -16,17 +16,18 @@
 
         </div>
     </div>
-    <div class="mb-5">
-        <label for="booksId"
-            class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Libro</label>
-        <input type="text" id="booksId" formControlName="booksId"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-             />
-              <div *ngIf="specimenForm.get('booksId')?.invalid && specimenForm.get('booksId')?.touched">
-            <small *ngIf="specimenForm.get('booksId')?.errors?.['required']" class="text-red-500">El libro es necesario</small>
-        </div>
+       <label for="books" class="block font-semibold">Libro:</label>
+    <select id="books" formControlName="booksId" class="border p-2 w-full">
+      <option value="" disabled selected>Seleccione un libro</option>
+      <option *ngFor="let book of books" [value]="book.id">
+        {{ book.name }}
+      </option>
+    </select>
+    <div *ngIf="specimenForm.get('booksId')?.invalid && specimenForm.get('booksId')?.touched">
+      <small *ngIf="specimenForm.get('booksId')?.errors?.['required']" class="text-red-500">Debe seleccionar un libro.</small>
     </div>
      <div class="mb-5">
+
         <label for="condition"
             class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Condición</label>
         <input type="text" id="condition" formControlName="condition"
