--- a/src/app/pages/specimens/specimens-update/specimens-update.component.html
+++ b/src/app/pages/specimens/specimens-update/specimens-update.component.html
@@ -1,1 +1,51 @@
-<p>specimens-update works!</p>
+<div class="px-5 py-4 border-b border-gray-200 flex items-center justify-between">
+    <h2 class="text-lg font-semibold text-gray-800">Editar Especimen</h2>
+    <!-- Acciones opcionales -->
+
+</div>
+
+
+<form class="max-w-sm mx-auto" [formGroup]="specimenForm" (ngSubmit)="updateSpecimen()">
+    <div class="mb-5">
+        <label for="price" class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Precio</label>
+        <input type="text" id="price" formControlName="price"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+        <div *ngIf="specimenForm.get('price')?.invalid && specimenForm.get('price')?.touched">
+            <small *ngIf="specimenForm.get('price')?.errors?.['required']" class="text-red-500">El precio es obligatorio.</small>
+
+        </div>
+    </div>
+    <div class="mb-5">
+        <label for="condition"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Condicion</label>
+        <input type="text" id="condition" formControlName="condition"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+              <div *ngIf="specimenForm.get('condition')?.invalid && specimenForm.get('condition')?.touched">
+            <small *ngIf="specimenForm.get('condition')?.errors?.['required']" class="text-red-500">La descripcion
+                obligatorio.</small>
+
+        </div>
+    </div>
+      <div class="mb-5">
+        <label for="observation"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Condicion</label>
+        <input type="text" id="observation" formControlName="observation"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+              <div *ngIf="specimenForm.get('observation')?.invalid && specimenForm.get('observation')?.touched">
+            <small *ngIf="specimenForm.get('observation')?.errors?.['required']" class="text-red-500">la observacion es obligatoria.</small>
+
+        </div>
+    </div>
+
+      <div class="mt-4 flex flex-col sm:flex-row gap-3 justify-end">
+    <button type="submit"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Actualizar</button>
+        
+          <button routerLink="/specimens"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Cerrar</button>
+        </div>
+</form>
+
