--- a/src/app/pages/books/books-update/books-update.component.html
+++ b/src/app/pages/books/books-update/books-update.component.html
@@ -84,6 +84,15 @@
 
         <div>
             <label for="file" class="block font-semibold">Imagen:</label>
+            <input type="file" id="file" (change)="onFileSelected($event)" accept="image/*" class="border p-2 w-full">
+            <div *ngIf="booksForm.get('file')?.invalid && booksForm.get('file')?.touched">
+                <small *ngIf="booksForm.get('file')?.errors?.['required']" class="text-red-500">La images es
+                    obligatorio.</small>
+            </div>
+        </div>
+
+        <div>
+            <label for="file" class="block font-semibold">Imagen:</label>
             <img
     class="h-24 w-24 object-contain rounded"
     [src]="imageUrl"
@@ -107,7 +116,7 @@
             Enviar
         </button>
 
-        <button type="button" routerLink="/author" class="text-white bg-gray-600 hover:bg-gray-700 focus:ring-4 focus:outline-none
+        <button type="button" routerLink="/books" class="text-white bg-gray-600 hover:bg-gray-700 focus:ring-4 focus:outline-none
              focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5">
             Cerrar
         </button>
