--- a/src/app/pages/publishers/publishers-create/publishers-create.component.html
+++ b/src/app/pages/publishers/publishers-create/publishers-create.component.html
@@ -1,1 +1,64 @@
-<p>publishers-create works!</p>
+
+<div class="px-5 py-4 border-b border-gray-200 flex items-center justify-between">
+    <h2 class="text-lg font-semibold text-gray-800">Publisher</h2>
+    <!-- Acciones opcionales -->
+
+</div>
+
+
+<form class="max-w-sm mx-auto" [formGroup]="publisherForm" (ngSubmit)="sendForm()">
+    <div class="mb-5">
+        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Nombre</label>
+        <input type="text" id="name" formControlName="name"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+        <div *ngIf="publisherForm.get('name')?.invalid && publisherForm.get('name')?.touched">
+            <small *ngIf="publisherForm.get('name')?.errors?.['required']" class="text-red-500">El nombre es
+                obligatorio.</small>
+
+        </div>
+    </div>
+    <div class="mb-5">
+        <label for="city"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Ciudad</label>
+        <input type="text" id="city" formControlName="city"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+              <div *ngIf="publisherForm.get('city')?.invalid && publisherForm.get('city')?.touched">
+            <small *ngIf="publisherForm.get('city')?.errors?.['required']" class="text-red-500">La ciudad
+                es necesaria.</small>
+
+        </div>
+    </div>
+     <div class="mb-5">
+        <label for="country"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Pais</label>
+        <input type="text" id="country" formControlName="country"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+              <div *ngIf="publisherForm.get('country')?.invalid && publisherForm.get('country')?.touched">
+            <small *ngIf="publisherForm.get('country')?.errors?.['required']" class="text-red-500">El pais  es necesario</small>
+
+        </div>
+    </div>
+    <div class="mb-5">
+        <label for="phone"
+            class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Telefono</label>
+        <input type="text" id="phone" formControlName="phone"
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+             />
+              <div *ngIf="publisherForm.get('phone')?.invalid && publisherForm.get('phone')?.touched">
+            <small *ngIf="publisherForm.get('phone')?.errors?.['required']" class="text-red-500">El Telefono es necesario</small>
+
+        </div>
+    </div>
+
+      <div class="mt-4 flex flex-col sm:flex-row gap-3 justify-end">
+    <button type="submit"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Enviar</button>
+        
+          <button routerLink="/publishers"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Cerrar</button>
+        </div>
+</form>
+
