--- a/src/app/pages/publishers/publishers-delete/publishers-delete.component.html
+++ b/src/app/pages/publishers/publishers-delete/publishers-delete.component.html
@@ -1,1 +1,14 @@
-<p>publishers-delete works!</p>
+<div class="bg-white p-6 rounded-lg shadow-lg max-w-sm w-full">
+    <h2 class="text-xl font-semibold text-gray-800 mb-4">Confirmar Eliminación</h2>
+    <p class="text-gray-600 mb-6">¿Estás seguro de que deseas eliminar esta Licencia?</p>
+
+    <p><strong>Nombre: </strong> {{publisherData.name}}</p>
+    <p><strong>Ciudad: </strong> {{publisherData.city}}</p>
+    <p><strong>Pais: </strong> {{publisherData.country}}</p>
+    <p><strong>Telefono: </strong> {{publisherData.phone}}</p>
+
+    <div class="flex justify-end space-x-4">
+        <a routerLink="/publishers" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">Cancelar</a>
+        <button (click)="deleteClassification()" class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700">Eliminar</button>
+    </div>
+</div>
