--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -37,12 +37,21 @@
                         <a routerLink="/category"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Categorias</a>
-                        <a routerLink="/category"
+                        <a routerLink="/books"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Libros</a>
                         <a routerLink="/author"
                           routerLinkActive="bg-gray-900"
                             class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Author</a>
+                             <a routerLink="/publishers"
+                          routerLinkActive="bg-gray-900"
+                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Editorial</a>
+                             <a routerLink="/classifications"
+                          routerLinkActive="bg-gray-900"
+                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Clasificación</a>
+                             <a routerLink="/specimens"
+                          routerLinkActive="bg-gray-900"
+                            class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Ejemplares</a>
                     </div> 
                 </div>
             </div>
