--- a/src/app/pages/classification/classification-create/classification-create.component.html
+++ b/src/app/pages/classification/classification-create/classification-create.component.html
@@ -1,6 +1,6 @@
 
 <div class="px-5 py-4 border-b border-gray-200 flex items-center justify-between">
-    <h2 class="text-lg font-semibold text-gray-800">Categoria</h2>
+    <h2 class="text-lg font-semibold text-gray-800">Clasificación</h2>
     <!-- Acciones opcionales -->
 
 </div>
@@ -46,7 +46,7 @@
     <button type="submit"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Enviar</button>
         
-          <button routerLink="/classification"
+          <button routerLink="/classifications"
         class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Cerrar</button>
         </div>
 </form>
