--- a/src/app/pages/publishers/publishers-create/publishers-create.component.html
+++ b/src/app/pages/publishers/publishers-create/publishers-create.component.html
@@ -1,6 +1,6 @@
 
 <div class="px-5 py-4 border-b border-gray-200 flex items-center justify-between">
-    <h2 class="text-lg font-semibold text-gray-800">Publisher</h2>
+    <h2 class="text-lg font-semibold text-gray-800">Editorial</h2>
     <!-- Acciones opcionales -->
 
 </div>
