--- a/src/app/pages/publishers/publishers-list/publishers-list.component.html
+++ b/src/app/pages/publishers/publishers-list/publishers-list.component.html
@@ -30,15 +30,18 @@
                           <th scope="col" class="px-6 py-3">
                                 Telefono
                         </th>
+                        <th scope="col" class="px-6 py-3">
+                                Acciones
+                        </th>
+                        
+                        
 
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let publisher of publishers"
                         class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            {{ publishers }}
-                        </th>
+                      
                             <td class="px-6 py-4">
                             {{ publisher.id }}
                         </td>
