--- a/src/app/pages/specimens/specimens-create/specimens-create.component.html
+++ b/src/app/pages/specimens/specimens-create/specimens-create.component.html
@@ -39,13 +39,13 @@
         </div>
     </div>
      <div class="mb-5">
-  <label for="observation"
+  <label for="observations"
       class="block mb-2 text-sm font-medium text-gray-900 dark:text-black">Observaciones</label>
-  <input type="text" id="observation" formControlName="observation"
+  <input type="text" id="observations" formControlName="observations"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
   
-  <div *ngIf="specimenForm.get('observation')?.invalid && specimenForm.get('observation')?.touched">
-    <small *ngIf="specimenForm.get('observation')?.errors?.['minlength']" class="text-red-500">
+  <div *ngIf="specimenForm.get('observations')?.invalid && specimenForm.get('observations')?.touched">
+    <small *ngIf="specimenForm.get('observations')?.errors?.['minlength']" class="text-red-500">
       La observación debe tener al menos 5 caracteres.
     </small>
   </div>
