--- a/src/app/pages/specimens/specimens-delete/specimens-delete.component.html
+++ b/src/app/pages/specimens/specimens-delete/specimens-delete.component.html
@@ -5,7 +5,7 @@
 
     <p><strong>Precio: </strong> {{specimenData.price}}</p>
     <p><strong>Condicion: </strong> {{specimenData.condition}}</p>
-    <p><strong>Observaciones: </strong> {{specimenData.observation}}</p>
+    <p><strong>Observaciones: </strong> {{specimenData.observations}}</p>
 
     <div class="flex justify-end space-x-4">
         <a routerLink="/specimens" class="px-4 py-2 bg-gray-300 text-gray-700 rounded hover:bg-gray-400">Cancelar</a>
