--- a/src/app/pages/specimens/specimens-list/specimens-list.component.html
+++ b/src/app/pages/specimens/specimens-list/specimens-list.component.html
@@ -22,7 +22,7 @@
                             Precio
                         </th>
                         <th scope="col" class="px-6 py-3">
-                            IdLibro
+                            Libro
                         </th>
                         <th scope="col" class="px-6 py-3">
                             Condición
@@ -30,6 +30,11 @@
                            <th scope="col" class="px-6 py-3">
                             Observación
                         </th>
+
+                         <th scope="col" class="px-6 py-3">
+                            Acciones
+                        </th>
+                        
 
                     </tr>
                 </thead>
@@ -43,13 +48,13 @@
                             {{ specimen.price }}
                         </td>
                         <td class="px-6 py-4">
-                            {{ specimen.booksId }}
+                            {{ specimen.books }}
                         </td>
                           <td class="px-6 py-4">
                             {{ specimen.condition }}
                         </td>
                         <td class="px-6 py-4">
-                            {{ specimen.observation }}
+                            {{ specimen.observations }}
                         </td>
 
                         <td class="px-3 py-2">
